--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@ waiting....
 <button id='send'>send</button>
 
 
-<script src="http://localhost:3000/socket.io/socket.io.js"></script>
+<script src="http://216.24.57.3:3000/socket.io/socket.io.js"></script>
 
 <script>
 const usrName = document.getElementById('userName');
 const ID = document.getElementById("usrID");
-const socket = io("http://localhost:3000");
+const socket = io("http://216.24.57.3:3000")
 const msg = document.getElementById("message");
 const msg1 = document.getElementById('message1');
 
