--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ waiting....
 <button id='send'>send</button>
 
 
-<script  src="http://localhost:3000/socket.io/socket.io.js"></script>
+<script  src="/socket.io/socket.io.js"></script>
 
 <!--<script>
 const usrName = document.getElementById('userName');
@@ -122,7 +122,7 @@ msg.innerHTML = e;
 
 const usrName = document.getElementById('userName');
 const ID = document.getElementById("usrID");
-const socket = io("http://localhost:3000")
+const socket = io();
 const msg = document.getElementById("message");
 const msg1 = document.getElementById('message1');
 
