--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
     var userName = prompt('Please enter your name:');
 
 
-socket.on('usr-connected',()={
-  
-var messageElem = document.createElement('div');
-      messageElem.textContent = 'New user connected....';
-    
+    socket.on('usr-connected', (soc) = {
+
+      var messageElem = document.createElement('div');
+      messageElem.textContent = 'New user connected....'+soc;
+
       messageElem.classList.add('message', 'received');
 
       document.getElementById('messages').appendChild(messageElem);
 
-});
+    });
     // listen for incoming messages from server
     socket.on('message', function(data) {
       var messageElem = document.createElement('div');
       messageElem.textContent = data;
-    
+
       messageElem.classList.add('message', 'received');
 
       document.getElementById('messages').appendChild(messageElem);
