--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <style>
   body {
+    display:flex;
     padding: 0px;
   }
 
   #messages {
+    align-self: center;
     margin-right: 5px;
     border: 2px solid black;
     box-sizing: border-box;
