--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,13 @@
 <body>
   <div class="container">
     <h1>NEPALI CHAT</h1>
+    
     <div class="chat-window">
       <div class="messages"></div>
     </div>
     <div class='text-input'>
       <input type="text" id="message-input" placeholder="Type your message...">
-      <button id="send-button">Send</button>
+      <button id="send-button">Enter</button>
 
     </div>
   </div>
