--- a/public/index.html
+++ b/public/index.html
@@ -9,21 +9,23 @@
 <body>
   <div class="container">
     <h1>NEPALI CHAT</h1>
-    
+
     <div class="chat-window">
       <div class="messages"></div>
     </div>
-    <div class='text-input'>
-      <input type="text" id="message-input" placeholder="Type your message...">
-      <button id="send-button">Enter</button>
+    <form action="/login" method="post">
+      <div class='text-input'>
+        <input type="text" id="message-input" placeholder="Type your message...">
+        <button id="send-button">Enter</button>
 
-    </div>
+      </div>
+    </form>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-   const username = prompt("Please enter your name"); // prompt for username
+    const username = prompt("Please enter your name"); // prompt for username
 
     const messagesContainer = document.querySelector('.messages');
     const messageInput = document.querySelector('#message-input');
@@ -32,6 +34,19 @@
     sendButton.addEventListener("click", e=> {
       send();
     });
+    messageInput.addEventListener("click", e=> {
+      e.preventDefault();
+    })
+
+
+    messageInput.addEventListener('focus', function() {
+      setTimeout(function() {
+        messageInput.scrollIntoView({
+          behavior: 'smooth', block: 'end', inline: 'nearest'
+        });
+      }, 200);
+    });
+
 
     messageInput.addEventListener('keydown', (e) => {
       e.preventDefault();
