--- a/public/login.html
+++ b/public/login.html
@@ -47,13 +47,13 @@
     input[type="submit"]:hover {
       background-color: #3E8E41;
     }
-    
+
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Login</h1>
-    <form action="" method="post">
+    <form action="/login" method="post">
       <input type="text" name="username" placeholder="Username" required>
       <input type="password" name="password" placeholder="Password" required>
       <input type="submit" value="Login">
